--- a/css/styles.css
+++ b/css/styles.css
@@ -201,7 +201,7 @@ img {
 }
 
 .icon-auth {
-    fill:var(--main-icon-color);
+    fill:var(--main-text-color);
     margin-right: 10px;
 
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -682,6 +682,43 @@ img {
 
 .footer-icon-link {
     background-color: rgba(255, 255, 255, 0.1);
+}
+
+.footer-mail-thumb {
+    display: flex;
+    align-items: center;
+
+    margin-top: 20px;
+}
+
+.apply-button-features {
+    display: flex;
+    align-items: center;
+
+    padding: 10px 28px 10px 29px;
+    margin-left: 12px;
+
+    box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+    border: none;
+}
+
+.footer-mail-input {
+    height: 50px;
+    min-width: 358px;
+    padding-left: 16px;
+
+    font-size: 16px;
+    line-height: 1.25;
+    color: rgba(255, 255, 255, 0.6);
+    background-color: transparent;
+
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+}
+
+.icon-send {
+    margin-left: 10px;
 }
 
 /* Страница Портфолио */
