--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
     --main-text-color: #757575;
     --footer-bg-color: #2F303A;
     --main-icon-color: #AFB1B8;
+    --form-label-color: #757575;
     --accent-white-color: #ffffff;
     --main-button-bg-color: #F5F4FA;
     --accented-button-color: #ffffff;
@@ -49,7 +50,8 @@ img {
 .projects-list,
 .regular-customers-list,
 .workers-thumb,
-.footer-soc-thumb {
+.footer-soc-thumb,
+.form-list {
     list-style-type: none;
 }
 
@@ -332,6 +334,7 @@ img {
 
     min-width: 528px;
     min-height: 581px;
+    padding: 40px;
 
     background: var(--accent-white-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -351,6 +354,79 @@ img {
     color: inherit;
     background-color: transparent;
     cursor: pointer;
+}
+
+.icon-close {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-modal-button:hover .icon-close,
+.close-modal-button:focus .icon-close {
+    fill: var(--accent-color);
+}
+
+.modal-title {
+    margin-bottom: 12px;
+
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    
+    color: var(--headline-color);
+}
+
+.form-item {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.form-item:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+.input-field-thumb {
+    position: relative;
+    width: 100%;
+}
+
+.label-field {
+    margin-bottom: 4px;
+
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    
+    color: var(--form-label-color);
+}
+
+.input-field {
+    width: 100%;
+    height: 40px;
+    padding-left: 42px;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+
+.input-field:focus-within + .icon-form{
+    fill: var(--accent-color);
+}
+
+.text-area {
+    height: 120px;
+    resize: none;
+    padding: 12px 16px;
+}
+
+.icon-form {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    transform: translateY(-50%);
+
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Наши преимущества */
