--- a/css/styles.css
+++ b/css/styles.css
@@ -386,6 +386,14 @@ img {
     margin-bottom: 10px;
 }
 
+.form-item:last-child {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
 .input-field-thumb {
     position: relative;
     width: 100%;
@@ -418,6 +426,14 @@ img {
     height: 120px;
     resize: none;
     padding: 12px 16px;
+
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+}
+
+.text-area::placeholder {
+    color: rgba(117, 117, 117, 0.5);
 }
 
 .icon-form {
@@ -427,6 +443,28 @@ img {
     transform: translateY(-50%);
 
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.privacy-policy-thumb {
+    display: flex;
+    align-items: center;
+}
+
+.checkbox-field {
+    appearance: none;
+}
+
+.checkbox-label-field {
+    margin-left: 8px;
+
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--form-label-color);
+}
+
+.privacy-policy-link {
+    color: var(--accent-color);
 }
 
 /* Наши преимущества */
