--- a/css/styles.css
+++ b/css/styles.css
@@ -412,6 +412,12 @@ img {
 
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+
+    transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-field:focus {
+    outline: 1px solid var(--accent-color);
 }
 
 .input-field:focus-within + .icon-form{
